# Quadratic-congruence-solver

./: Cargo.toml  README.md
.github/workflows/: main.yml
src/: equation.rs  euclid.rs  main.rs  prime.rs  residue.rs  solver.rs
