[package]
name = "quadratic_congruence_solver"
description = "Solver for quadratic and linear congruence equations."
keywords = ["modular-arithmetic", "congruence", "linear-equations", "quadratic-equations"]
license = "GPL-3.0"
version = "1.2.0"

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 3
overflow-checks = true

[profile.release]
opt-level = 3

[dependencies]
